--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,13 @@
         "listitem": "off",
         "list": "off"
       }
-    ]
+    ],
+    "axe/keyboard": [
+      "default",
+      {
+        "nested-interactive": "off"
+      }
+    ],
+    "button-type": "off"
   }
 }
