Đang đợi Ngọc làm nốt bảng, lưu trữ
Đang sửa file customer và report

--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,13 @@
         "nested-interactive": "off"
       }
     ],
-    "button-type": "off"
+    "button-type": "off",
+    "axe/text-alternatives": [
+      "default",
+      {
+        "document-title": "off"
+      }
+    ],
+    "meta-viewport": "off"
   }
 }
