--- a/.hintrc
+++ b/.hintrc
@@ -23,6 +23,7 @@
         "document-title": "off"
       }
     ],
-    "meta-viewport": "off"
+    "meta-viewport": "off",
+    "no-inline-styles": "off"
   }
 }
